# py-alg

./: .gitignore  CONTRIBUTING  CONTRIBUTING.md  LICENSE  README  README.md  pyproject.toml  requirements.txt  todo.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  coverage-badge.yml  coverage.yml  publish.yml
algorithms/: adjacent_transform.py  adjacent_transform_test.py  reduce.py  reduce_test.py  scan.py  scan_test.py
algorithms/iterable/: __init__.py  adjacent_transform.py  adjacent_transform_test.py  reduce.py  reduce_test.py  reverse.py  reverse_test.py  rotate.py  rotate_test.py  scan_test.py
algorithms/search/: binary_search.py  binary_search_test.py
algorithms/sort/: __init__.py  comparable.py  selection.py  selection_sort.py  selection_sort_test.py
dsa/graph/: __init__.py  graph.py  graph_test.py  matrix_graph.py  node_graph.py  node_graph_test.py
dsa/hash/: __init__.py  map.py  map_linked_list.py  map_list.py  map_test.py  set.py  set_test.py
dsa/heap/: __init__.py  heap.py  heap_test.py
dsa/iterable/: __init__.py  adjacent_transform.py  adjacent_transform_test.py  reduce_test.py  reverse.py  reverse_test.py  rotate.py  rotate_test.py  scan.py  scan_test.py  skip.py  skip_test.py
dsa/linked_list/: __init__.py  doubly_linked_list.py  doubly_linked_list_test.py  linked_list.py  linked_list_test.py  singly_linked_list.py  singly_linked_list_test.py
dsa/queue/: __init__.py  deque.py  deque_test.py  priority_queue.py  priority_queue_test.py  queue.py  queue_test.py
dsa/search/: __init__.py  binary_search.py  binary_search_test.py  linear_search.py  linear_search_test.py
dsa/sort/: __init__.py  heap_sort.py  insertion_sort.py  merge_sort.py  selection_sort.py  selection_sort_test.py  sort_test.py  test.py  tree_sort.py
dsa/stack/: stack.py  stack_test.py
dsa/tree/: __init__.py  binary_search_tree.py  binary_search_tree_test.py
dsa/typing/: __init__.py  comparison.py
examples/codesignal/: file_system.py  file_system_test.py  timed_file_system.py  timed_file_system_test.py
examples/leetcode/linked_list/: detect_cycle.py  reverse_linked_list.py
examples/leetcode/stack/: queue_with_stacks.py
examples/leetcode/strings/: next_in_sequence.py
leetcode/linked_list/: detect_cycle.py  detect_cycle_test.py  reverse_linked_list.py  reverse_linked_list_test.py
leetcode/stack/: queue_with_stacks.py  queue_with_stacks_test.py
leetcode/strings/: next_in_sequence.py  next_in_sequence_test.py
package/: sample.py  sample_test.py
practice/: file_system.py  file_system_test.py  timed_file_system.py  timed_file_system_test.py
src/dsap/graph/: matrix_graph.py  node_graph.py
src/dsap/hash/: map_linked_list.py  map_list.py  set.py
src/dsap/heap/: __init__.py  heap.py
src/dsap/iterable/: rotate.py
src/dsap/linked_list/: singly_linked_list.py
src/dsap/queue/: __init__.py  deque.py  priority_queue.py  queue.py
src/dsap/search/: __init__.py  binary_search.py  linear_search.py
src/dsap/sort/: __init__.py  bubble_sort.py  heap_sort.py  insertion_sort.py  merge_sort.py  quick_sort.py  selection_sort.py  tim_sort.py  tree_sort.py
src/dsap/tree/: __init__.py  binary_search_tree.py  trie.py
src/dsap/trie/: trie.py
tests/examples/codesignal/: file_system_test.py  timed_file_system_test.py
tests/graph/: graph_test.py
tests/hash/: map_test.py  set_test.py
tests/heap/: heap_bench_test.py  heap_test.py
tests/iterable/: adjacent_transform_test.py  reduce_test.py  reverse_test.py  rotate_test.py  scan_test.py  skip_test.py
tests/linked_list/: linked_list_test.py
tests/queue/: deque_bench_test.py  deque_test.py  priority_queue_test.py  queue_test.py
tests/search/: binary_search_test.py  linear_search_test.py
tests/sort/: sort_bench_test.py  sort_test.py
tests/stack/: stack_test.py
tests/tree/: binary_search_tree_test.py  trie_test.py
tests/trie/: trie_test.py
(+4 files in other folders)
