[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[project]
name = "dsap"
version = "0.0.3"
description = "Common data structures and algorithms written in Python for learning"
authors = [{ name = "Tim Shur" }, { name = "Daniel Ochoa" }]
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "hatch",
    "mypy",
    "pytest",
    "pytest-benchmark",
    "pytest-testmon",
    "pytest-watcher",
    "ruff",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.hatch.envs.hatch-test]
extra-dependencies = ["pytest-benchmark", "pytest-cov"]

[tool.hatch.envs.test.scripts]
bench = "pytest{env:HATCH_TEST_ARGS:} --benchmark-only {args}"
watch = "ptw . --clear --doctest-modules --benchmark-skip --testmon"

[tool.hatch.envs.hatch-test.scripts]
run = "pytest{env:HATCH_TEST_ARGS:} --doctest-modules --benchmark-skip {args}"
run-cov = "pytest{env:HATCH_TEST_ARGS:} --benchmark-skip --cov=src --cov=examples --cov-report=term-missing:skip-covered --cov-report xml:coverage.xml {args}"
cov-combine = ""
cov-report = ""
