[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[project]
name = "dsap"
version = "0.1.1"
description = "Common data structures and algorithms written in Python for learning"
authors = [{ name = "Tim Shur" }, { name = "Daniel Ochoa" }]
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "mypy",
    "pytest",
    "pytest-benchmark",
    "pytest-cov",
    "pytest-testmon",
    "pytest-watcher",
    "ruff",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
